--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>        
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="index.css">
         <title>Rayane Tayache</title>
     </head>
     <body>
